name alignment fixed and icon added

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,3 +1,4 @@
-.names{
-    border: 1px solid salmon;
+.cart{
+   position: sticky;
+   top: 0;
 }
