--- a/src/components/Writer/Writer.css
+++ b/src/components/Writer/Writer.css
@@ -94,7 +94,7 @@
     border: none;
     cursor: pointer;
     line-height: 1.5;
-    font: 700 1.2rem 'Roboto Slab', sans-serif;
+    font: 700 1rem 'Roboto Slab', sans-serif;
     padding: 0.75em 2em;
     letter-spacing: 0.05rem;
     margin: 1em;
